--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <!-- Nav -->
-<div class="container">
+<div class="container nav-links">
     <ul class="nav nav-pills justify-content-center">
         <li class="nav-item">
             <a class="nav-link home active" href="#">Teams</a>
@@ -37,6 +37,19 @@
     </ul>
     <hr id="main">
 </div>
+
+<div class="loading-page " style="display: none">
+    <div class="row d-flex flex-column align-items-center justify-content-center">
+        <div class="spinner-grow" style="width: 3rem; height: 3rem; text-align: center">
+            <span class="sr-only"></span>
+        </div>
+    </div>
+    <div class="row d-flex flex-column align-items-center justify-content-center">
+        <strong>Loading Team Page</strong>
+    </div>
+</div>
+
+</nav>
 
 <!-- Main Content -->
 <div class="container main">
@@ -71,7 +84,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'CLE'}/${114}|}"><img th:src="@{/assets/img/CLENew.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Cleveland Indians">
+                <a th:href="@{|/team/${'CLE'}/${114}|}"><img th:src="@{/assets/img/CLE.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Cleveland Indians">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -83,7 +96,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'HOU'}/${117}|}"><img th:src="@{/assets/img/HOUNew.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Houston Astros">
+                <a th:href="@{|/team/${'HOU'}/${117}|}"><img th:src="@{/assets/img/HOU.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Houston Astros">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -135,7 +148,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'SEA'}/${136}|}"><img th:src="@{/assets/img/SEANew.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Seattle Mariners">
+                <a th:href="@{|/team/${'SEA'}/${136}|}"><img th:src="@{/assets/img/SEA.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Seattle Mariners">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -147,7 +160,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'TB'}/${139}|}"><img th:src="@{/assets/img/TBNew.gif}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Tampa Bay Rays">
+                <a th:href="@{|/team/${'TB'}/${139}|}"><img th:src="@{/assets/img/TB.gif}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Tampa Bay Rays">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -172,7 +185,11 @@
             <li class="breadcrumb-item avg"><a href="###">AVG</a></li>
         </ol>
         <div class="loading-main" style="display: none; text-align: center">
-            <img th:src="@{/assets/img/icons/ajax-loader.gif}" height="50" width="50">
+            <div class="text-center">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -186,7 +203,11 @@
             <li class="breadcrumb-item saves"><a href="###">Saves</a></li>
         </ol>
         <div class="loading-sub" style="display: none; text-align: center">
-            <img th:src="@{/assets/img/icons/ajax-loader.gif}" height="50" width="50">
+            <div class="text-center">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
         </div>
     </nav>
 </div>
