--- a/src/main/resources/templates/team_page.html
+++ b/src/main/resources/templates/team_page.html
@@ -10,10 +10,21 @@
 <!-- Navbar -->
 <nav th:replace="layout :: navbar"></nav>
 
+<div class="loading-teamPage " style="display: none; padding-top: 100px">
+    <div class="row d-flex flex-column align-items-center justify-content-center">
+        <div class="spinner-grow" style="width: 3rem; height: 3rem; text-align: center">
+            <span class="sr-only"></span>
+        </div>
+    </div>
+    <div class="row d-flex flex-column align-items-center justify-content-center">
+        <strong>Loading Player Page</strong>
+    </div>
+</div>
+
 <div class="container" th:object="${team}" style="margin-top: 30px">
     <div class="card d-flex align-items-center justify-content-center h-100" style="border: none; background-color: transparent">
         <a th:href="@{|/team/${team.getBisTeamCode()}/${team.getMlbOrgId()}|}"><img
-                th:src="@{'/assets/img/' + ${team.getMlbOrgAbbrev()} + '.png'}" class="img-thumbnail" width="400"
+                th:src="@{'/assets/img/' + ${team.getMlbOrgAbbrev()} + '.png'}" class="team-logo" width="400"
                 height="300">
         </a>
         <div class="card-body">
@@ -51,18 +62,28 @@
 </div>
 </div>
 
+<div class="reload-teamPage " style="display: none; padding-top: 30px">
+<div class="row d-flex flex-column align-items-center justify-content-center">
+    <div class="spinner-grow" style="width: 3rem; height: 3rem; text-align: center">
+        <span class="sr-only"></span>
+    </div>
+</div>
+<div class="row d-flex flex-column align-items-center justify-content-center">
+    <strong>Re-loading Team Data</strong>
+</div>
+</div>
+
 <!-- Main Content -->
 <div class="container main">
     <div id="upcomingSchedule">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12" th:each="games : ${nextTwelveGames}" style="margin-bottom: 20px">
                 <div class="card text-center">
-                    <div class="card-header text-center" style="background-color: darkcyan; color: white" th:text="${games.getDay().substring(5,7)} + '/' + ${games.getDay().substring(8,10)} + '/' + ${games.getDay().substring(0,4)}">Final</div>
+                    <div class="card-header text-center" style="background-color: darkcyan; color: white" th:text="${games.getDay().substring(5,7)} + '-' + ${games.getDay().substring(8,10)} + '-' + ${games.getDay().substring(0,4)}">Final</div>
                     <div class="card-body">
                         <h5 class="card-title" th:text="${games.getAwayTeam()} + ' vs ' + ${games.getHomeTeam()}">DET at ATL</h5>
                         <p class="card-text"><small class="text-muted" th:text="${games.getStadiumName()}">SunTrust Park</small></p>
-                        <p2 class="card-text" th:text="'Start Time: '+ ${games.getDateTime().substring(11, 16)}">Start Time: 13:05</p2>
-                        <!--<p class="card-text" th:text="${games.getAwayTeamRuns()} + '-' ${games.getHomeTeamRuns()} + ' ' + '(' + ${games.getInningHalf()} ': ' ${games.getInning()}">Score: 2-9 (T: 9)</p>-->
+                        <p2 class="card-text" th:text="'Start Time: '+ ${games.getStartTime()} + ' EST'">Start Time: 13:05</p2>
                     </div>
                 </div>
             </div>
@@ -73,11 +94,11 @@
             <div class="col-md-3 col-sm-6 col-xs-12 text-center" th:each="player : ${roster}" style="margin-bottom: 30px">
                 <div th:if="${player.getPositionTxt()} == 'P'">
                     <h6 th:text="${player.getNameFull()}" class="text-center"></h6>
-                    <a th:href="@{|/player/pitcher/${player.getPlayerId()}|}"><img th:src="@{'http://mlb.mlb.com/mlb/images/players/head_shot/' + ${player.getPlayerId()} + '.jpg'}" class="img-thumbnail"></a>
+                    <a  th:href="@{|/player/pitcher/${player.getPlayerId()}|}"><img th:src="@{'http://mlb.mlb.com/mlb/images/players/head_shot/' + ${player.getPlayerId()} + '.jpg'}" class="player-details"></a>
                 </div>
                 <div th:if="${player.getPositionTxt()} != 'P'">
                     <h6 th:text="${player.getNameFull()}" class="text-center"></h6>
-                    <a th:href="@{|/player/hitter/${player.getPlayerId()}|}"><img th:src="@{'http://mlb.mlb.com/mlb/images/players/head_shot/' + ${player.getPlayerId()} + '.jpg'}" class="img-thumbnail"></a>
+                    <a  th:href="@{|/player/hitter/${player.getPlayerId()}|}"><img th:src="@{'http://mlb.mlb.com/mlb/images/players/head_shot/' + ${player.getPlayerId()} + '.jpg'}" class="player-details"></a>
                 </div>
             </div>
         </div>
